commented role titles, consolidated some CSS; TODO: fix printing truncation of page-breaks!

--- a/resume.css
+++ b/resume.css
@@ -6,6 +6,18 @@ css for resume
 
 body {
 	background-color: #FFFFFF;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 21cm;
+}
+
+* {
+	overflow: visible;
+}
+
+.item {
+	break-inside: avoid;
+	break-after: always;
 }
 
 @media print {
@@ -13,14 +25,8 @@ body {
 		font-size: 11px;
 	}
 	
-	.legend {
+	legend {
 		background-color: #FFFFFF;
-		page-break-inside: avoid;
-		page-break-after: avoid;
-	}
-	
-	.item {
-		page-break-inside: avoid;
 	}
 }
 
